# RenderEngine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  README.zh.md
.github/workflows/: build.yml  cmake-multi-platform.yml
src/: main.cpp
src/core/: CMakeLists.txt  bitmap.cpp  bitmap.h  circle.h  engine.cpp  engine.h  line.cpp  line.h  matrix.h  options.h  test.cpp  utils.h  vector.h
src/engine/: CMakeLists.txt  test.cpp
src/engine/core/: bezier.cpp  circle.cpp  clip.cpp  engine.cpp  fill.cpp  line.cpp  point.cpp  polygon.cpp  transform.cpp
src/engine/include/: bezier.hpp  bitmap.h  bitmap.hpp  circle.h  circle.hpp  clip.hpp  color.hpp  colors.h  colors.hpp  common.h  config.hpp  engine.h  engine.hpp  fill.hpp  line.h  line.hpp  matrix.hpp  options.hpp  point.hpp  polygon.hpp  primitive.h  primitive.hpp  rectangle.hpp  transform.hpp  utils.h  utils.hpp  vector.hpp
src/frontend/: .env.example  index.html  package.json
src/frontend/src/: App.css  App.tsx  client.ts  drawFuncs.tsx  main.tsx  types.ts  utils.ts
src/frontend/src/pages/game/: index.css  index.tsx
src/frontend/src/pages/index/: index.tsx
src/frontend/src/pages/playground/: index.tsx
src/frontend/src/utils/: client.ts  drawFuncs.tsx  index.ts  types.ts
src/server/: CMakeLists.txt  EngineManager.h  EngineWebSocketSession.cpp  EngineWebSocketSession.h  HttpSession.cpp  HttpSession.h  Listener.cpp  Listener.h  Server.h  WebServer.cpp  WebServer.h  WebSocketSession.h  WebsocketSession.cpp  common_response.hpp  engine_manger.h  handle_request.cpp  handle_request.h  logger.h  main.cpp  misc.cpp  serialize.cpp  serialize.h  test.html
src/server/serialize/: serialize.cpp  serialize.h  serialize_bezier.h  serialize_circle.h  serialize_clip.h  serialize_color.h  serialize_fill.h  serialize_line.h  serialize_options.h  serialize_point.h  serialize_polygon.h  serialize_rectangle.h  serialize_transform.h
